fix: prevent overflow on main (why was this there?)

--- a/template/static/style.css
+++ b/template/static/style.css
@@ -115,7 +115,7 @@ main {
 	padding: 25px 40px;
 
 	background: var(--bg1);
-	overflow-x: auto;
+	/* overflow-x: auto; */
 }
 
 @media screen and (max-width: 700px) {
